Views Calendar 5.x
==================

Version 2.0rc2
==============
- #223601 Re-implement the 'mini' url for calendar block so it will work in Panels and ajax.
- #243220 Add items to the calendar date box theme.
- #243725 Add title/description/url to calendar setup form.
- #243254 Make sure args aren't overriden if already set.
- #239501 Add missing argument for teaser display.
- #210844 Make sure empty text displays.
- #234635 Add calendar_build_nodes() to calendar_ical export processing.
- #243712 make sure default views are retrieved as well as db views.
- #235434 Using timezone name instead of timezone object in several places.
- #233513 Fix missing $selected marker.
- #233975 Don't bypass theme function.
- #242686 Fix spelling errors.
- #240297 make sure id has a value.

Version 2.0rc
=============
- Make sure new required modules get enabled during the update.
- Fix To time in calendar, was incorrectly picking up a :59 value.
- Make sure min and max dates are in localtime.
- #225459 Fix days that span multiple days.
- #220657 Revert to using the API instead of templates for drawing the calendar.
- #186875 make sure navigation is always returned as an array so it doesn't break table theme.
- Remove database timezone handling by rolling back to previous version that used offsets instead. Based on problems noted in #218479 and #220663, we cannot count on database timezone handling to be available in MYSQL or work consistently with the timezone names that PHP uses in POSTGRES, so trying to do timezone conversions in the database is not going to work.
- #219200 Make sure views is available during install.
- #218704 Fix error in setting array variable.
- Getting rid of offsets!! Alter query code to cast ISO and UNIX dates to native datetimes and do timezone conversion in the database. Much faster and more accurate.
  The offset fields can now be dropped from the Date fields since we only need the timezone name to do the conversion.