@@ -33,30 +33,35 @@ function theme_calendar_views_calendar(&$view, &$items, $type) {
   switch($view->calendar_display) {
     case ('table') :
       $view->table_header = _views_construct_header($view, _views_get_fields());
-      return theme('calendar_view_table', $view, $items, $type);
+      $out =  theme('calendar_view_table', $view, $items, $type);
     case ('teasers') :
-      return theme('calendar_view_teasers', $view, $items, $type);
+      $out =  theme('calendar_view_teasers', $view, $items, $type);
     case ('nodes') :
-      return theme('calendar_view_nodes', $view, $items, $type);
+      $out =  theme('calendar_view_nodes', $view, $items, $type);
     case ('list') :
-      return theme('calendar_view_list', $view, $items, $type);
-  }
+      $out =  theme('calendar_view_list', $view, $items, $type);
+    default:
+      $params['url'] = calendar_real_url($view, $view->args);
+      $params['append'] = calendar_url_append($view);
+      $params['stripe'] = 'stripe';
 
-  $params['url'] = calendar_real_url($view, $view->args);
-  $params['append'] = calendar_url_append($view);
-  $params['stripe'] = 'stripe';
-
-  // Set to TRUE to see week numbers in each row.
-  $formats = calendar_get_formats($view);
-  if (!empty($formats['week'])
-  && $view->build_type != 'block'
-  && $view->calendar_type == 'month') {
-    $params['with_weekno'] = TRUE;
+      // Set to TRUE to see week numbers in each row.
+      $formats = calendar_get_formats($view);
+      if (!empty($formats['week'])
+      && $view->build_type != 'block'
+      && $view->calendar_type == 'month') {
+        $params['with_weekno'] = TRUE;
+      }
+      else {
+        $params['with_weekno'] = FALSE;
+      }
+      $out =  calendar_build_calendar($view, $items, $params);
   }
-  else {
-    $params['with_weekno'] = FALSE;
+  if ($_GET['view'] == 'ajax') {
+    print $out;
+    exit;
   }
-  return calendar_build_calendar($view, $items, $params);
+  return $out;
 }
 
 /**
