@@ -3,6 +3,7 @@ Views Calendar 5.x
 
 Version 2.0rc2
 ==============
+- #154479 Add jQuery ajax update for navigating mini block calendar.
 - #223601 Re-implement the 'mini' url for calendar block so it will work in Panels and ajax.
 - #243220 Add items to the calendar date box theme.
 - #243725 Add title/description/url to calendar setup form.
